--- a/cards/src/main/resources/cards/custom/group2/baron/spell_warfare_project.json
+++ b/cards/src/main/resources/cards/custom/group2/baron/spell_warfare_project.json
@@ -4,7 +4,7 @@
   "type": "SPELL",
   "heroClass": "NAVY",
   "rarity": "RARE",
-  "description": "Add two 2/2 Knights to both players' hands.",
+  "description": "Both players receive two 2/2 Knights.",
   "targetSelection": "NONE",
   "spell": {
     "class": "BothPlayersSpell",
