--- a/cards/src/main/resources/cards/custom/group8/occultist/misc2/spell_foul_manifest.json
+++ b/cards/src/main/resources/cards/custom/group8/occultist/misc2/spell_foul_manifest.json
@@ -4,7 +4,7 @@
   "type": "SPELL",
   "heroClass": "DARKGREEN",
   "rarity": "COMMON",
-  "description": "Give a minion +2/+2. Add a copy of it to your hand.",
+  "description": "Give a minion +2/+2. Receive a copy of it.",
   "targetSelection": "MINIONS",
   "spell": {
     "class": "MetaSpell",
