--- a/cards/src/main/resources/cards/custom/storyteller/verdant/minion_beauty_and_the_beast.json
+++ b/cards/src/main/resources/cards/custom/storyteller/verdant/minion_beauty_and_the_beast.json
@@ -6,7 +6,7 @@
   "baseAttack": 3,
   "baseHp": 3,
   "rarity": "LEGENDARY",
-  "description": "Dash. At the end of each turn, swap this minion's Attack and Health, then gain +2 Health.",
+  "description": "Dash. At the end of each turn, swap Attack and Health, then gain +2 Health.",
   "trigger": {
     "eventTrigger": {
       "class": "TurnEndTrigger",
