--- a/cards/src/main/resources/cards/custom/group10/spellsource_core_rare/minion_mindswapper.json
+++ b/cards/src/main/resources/cards/custom/group10/spellsource_core_rare/minion_mindswapper.json
@@ -7,7 +7,7 @@
   "baseHp": 2,
   "race": "FAE",
   "rarity": "RARE",
-  "description": "Opener: Swap your leftmost card with your opponent's.",
+  "description": "Opener: Swap the leftmost card in your hand with your opponent's.",
   "battlecry": {
     "targetSelection": "NONE",
     "condition": {
