makes baron cards that shouldn't be collectable uncollectable (#1589)
* Update quest_forces_of_gilneas.json

* Update spell_lesser_topaz_spellstone.json

--- a/cards/src/main/resources/cards/custom/group2/baron/quest_forces_of_gilneas.json
+++ b/cards/src/main/resources/cards/custom/group2/baron/quest_forces_of_gilneas.json
@@ -19,7 +19,7 @@
     "class": "ReceiveCardSpell",
     "card": "minion_king_archibald"
   },
-  "collectible": true,
+  "collectible": false,
   "set": "CUSTOM",
   "fileFormatVersion": 1
 }
