--- a/cards/build.gradle
+++ b/cards/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     testImplementation 'io.github.classgraph:classgraph:4.8.59'
     testImplementation 'org.jetbrains:annotations:16.0.2'
     testImplementation project(':testutils')
-    testRuntimeOnly group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.0-rc-2'
+    testRuntimeOnly group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.2'
 }
 
 test {
