--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,10 @@ services:
       - web
       - backend
     deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 30s
+        window: 50s
       labels:
         - "traefik.versionedhost.frontend.rule=${GAME_VERSIONED_HOST_RULE}"
         - "traefik.versionedhost.frontend.entryPoints=http,https"
@@ -69,6 +73,11 @@ services:
           - node.platform.arch == x86_64
           - node.labels.cpu == high
           - node.labels.disk == ssd
+    healthcheck:
+      test: curl -sSX GET http://127.0.0.1/version || exit 1
+      interval: 10s
+      timeout: 1s
+      retries: 4
   mongo:
     image: "mongo:3.6"
     networks:
