--- a/game/build.gradle
+++ b/game/build.gradle
@@ -21,3 +21,7 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.7'
     implementation 'commons-io:commons-io:2.5'
 }
+
+javadoc {
+
+}
