--- a/gradle/deployment.gradle
+++ b/gradle/deployment.gradle
@@ -222,7 +222,7 @@ task distWWW(type: Exec, group: 'Spellsource') {
     commandLine './deploy.sh'
 }
 
-task deployAll(type: Exec, group: 'Spellsource') {
+task deployAll(group: 'Spellsource') {
     description("Deploys the server, the client and the website")
     dependsOn += [distSteam, distIOS, distAndroid, distWebGL, distSwarm, distWWW]
 }
