In-progress card editing in browser

--- a/www/package.json
+++ b/www/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-ace": "^8.1.0",
     "react-blockly": "^5.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
