--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "blockly": "^3.20200402.1",
+    "canvas": "^2.6.1",
     "enumify": "^2.0.0",
     "gatsby": "^2.19.23",
     "gatsby-image": "^2.2.41",
@@ -30,6 +31,7 @@
     "react-blockly": "^5.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
+    "react-loadable": "^5.5.0",
     "recursive-omit-by": "^2.0.0",
     "string-format": "^2.0.0"
   },
