Fix bot memory usage and add its token

--- a/discordbot/Dockerfile
+++ b/discordbot/Dockerfile
@@ -6,8 +6,6 @@ ADD ./ /app
 WORKDIR /app
 RUN ./gradlew --no-daemon discordbot:shadowJar
 RUN cp /app/discordbot/build/libs/discordbot-*-all.jar /app/app.jar
-RUN curl -L -o musl.tar.gz https://github.com/gradinac/musl-bundle-example/releases/download/v1.0/musl.tar.gz && \
-    tar -xvzf musl.tar.gz
 RUN javap -cp /app/app.jar com.hiddenswitch.spellsource.discordbot.applications.DiscordBot && \
     native-image --verbose \
     --no-server \
@@ -15,12 +13,15 @@ RUN javap -cp /app/app.jar com.hiddenswitch.spellsource.discordbot.applications.
     --enable-http \
     --enable-https \
     --allow-incomplete-classpath \
-    --static \
-    -H:+JNI \
     -Djava.net.preferIPv4Stack=true \
-    -H:UseMuslC=bundle/ \
     -jar /app/app.jar discordbot_exec
 
-FROM scratch
+# use phusion baseimage because we need glibc
+FROM phusion/baseimage:0.11
+# Put in the compiled binary
 COPY --from=graalvm /app/discordbot_exec /app/discordbot
-ENTRYPOINT ["/app/discordbot", "-Djava.library.path=/app"]
+# Remember the root project is the context
+ADD discordbot/bin/run /etc/service/discordbot/run
+ENV DISCORD_BOT_API_KEY=needs_token
+
+CMD ["/sbin/my_init"]
