--- a/micro/build.gradle
+++ b/micro/build.gradle
@@ -34,12 +34,12 @@ dependencies {
     implementation 'commons-io:commons-io:2.5'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.+'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-common:1.3.+'
-    annotationProcessor platform("io.micronaut:micronaut-bom:1.3.1")
+    annotationProcessor platform("io.micronaut:micronaut-bom:1.3.5")
     annotationProcessor "io.micronaut:micronaut-graal"
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
-    compileOnly "org.graalvm.nativeimage:svm:19.3.+"
-    implementation platform("io.micronaut:micronaut-bom:1.3.1")
+    compileOnly "org.graalvm.nativeimage:svm:20.0.0"
+    implementation platform("io.micronaut:micronaut-bom:1.3.5")
     implementation "io.micronaut:micronaut-http-client"
     implementation "io.micronaut:micronaut-inject"
     implementation "io.micronaut:micronaut-validation"
@@ -47,9 +47,9 @@ dependencies {
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "javax.annotation:javax.annotation-api"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
-    testAnnotationProcessor platform("io.micronaut:micronaut-bom:1.3.1")
+    testAnnotationProcessor platform("io.micronaut:micronaut-bom:1.3.5")
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
-    testImplementation platform("io.micronaut:micronaut-bom:1.3.1")
+    testImplementation platform("io.micronaut:micronaut-bom:1.3.5")
     testImplementation "org.junit.jupiter:junit-jupiter-api"
     testImplementation "org.junit.jupiter:junit-jupiter-params"
     testImplementation "io.micronaut.test:micronaut-test-junit5"
