--- a/quasar-core/build.gradle
+++ b/quasar-core/build.gradle
@@ -87,6 +87,9 @@ sourceSets {
 }
 
 dependencies {
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'org.slf4j:slf4j-api:1.7.20'
+
     implementation("io.dropwizard.metrics:metrics-core:4.1.2") {
         exclude group: 'org.slf4j', module: '*'
     }
@@ -204,20 +207,6 @@ test {
         jvmArgs "-javaagent:${configurations.timewarp.singleFile}=3" // slow clock down x3
     }
     jvmArgs "-Xmx1024m"
-    beforeTest { desc ->
-        logger.quiet("Running test: " + desc)
-    }
-    afterTest { desc, result ->
-        if (result.resultType == TestResult.ResultType.FAILURE) {
-            logger.quiet("Failed test ${desc.name} [${desc.className}] with exception: ${result.exception}")
-            if (result.exception != null) {
-                result.exception.printStackTrace()
-            }
-        }
-    }
-    doLast() {
-        println "file://" + getReports().getHtml().getDestination() + "/index.html"
-    }
 }
 
 ['run', 'debug'].each { name ->
@@ -342,22 +331,9 @@ def scanAndInstrument(SourceSet sset, configs) {
 
     ant.taskdef(name: 'instrumentation', classname: 'co.paralleluniverse.fibers.instrument.InstrumentationTask',
             classpath: cp)
-    ant.instrumentation(verbose: 'true', check: 'true', debug: 'true') {
+    ant.instrumentation(check: 'true') {
         fileset(dir: sset.output.classesDirs.asPath) {
             exclude(name: 'co/paralleluniverse/fibers/instrument/*.class')
         }
     }
-
-    // Filter out the 'requires org.objectweb.asm' from quasar-core's module-info, as it will be shadowed into the jar
-    /*
-    ant.taskdef(name: 'filterModules', classname: 'co.paralleluniverse.fibers.instrument.ModuleFilterTask', classpath: cp)
-    ant.filterModules(module: 'org.objectweb.asm') {
-        fileset(dir: sset.output.classesDirs.asPath)
-    }
-    ant.filterModules(module: 'org.objectweb.asm.util') {
-        fileset(dir: sset.output.classesDirs.asPath)
-    }
-    ant.filterModules(module: 'org.objectweb.asm.commons') {
-        fileset(dir: sset.output.classesDirs.asPath)
-    }*/
 }
