--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github.com:doctorpangloss/HiddenSwitch-Secrets.git
 [submodule "unityclient"]
 	path = unityclient
-	url = git@bitbucket.org:ben_berman/spellsource-client.git
+	url = git@github.com:hiddenswitch/Spellsource-Client.git
 [submodule "steamguardcli"]
 	path = steamguardcli
 	url = git@github.com:hiddenswitch/steamguard-cli.git
