--- a/.editorconfig
+++ b/.editorconfig
@@ -814,14 +814,16 @@ ij_cfml_ternary_operation_wrap = off
 ij_cfml_while_on_new_line = false
 
 [{*.cjs,*.js}]
-ij_continuation_indent_size = 4
+indent_size = 2
+tab_width = 2
+ij_continuation_indent_size = 2
 ij_javascript_align_imports = false
 ij_javascript_align_multiline_array_initializer_expression = false
 ij_javascript_align_multiline_binary_operation = false
 ij_javascript_align_multiline_chained_methods = false
 ij_javascript_align_multiline_extends_list = false
-ij_javascript_align_multiline_for = true
-ij_javascript_align_multiline_parameters = true
+ij_javascript_align_multiline_for = false
+ij_javascript_align_multiline_parameters = false
 ij_javascript_align_multiline_parameters_in_calls = false
 ij_javascript_align_multiline_ternary_operation = false
 ij_javascript_align_object_properties = 0
@@ -847,7 +849,7 @@ ij_javascript_catch_on_new_line = false
 ij_javascript_chained_call_dot_on_new_line = true
 ij_javascript_class_brace_style = end_of_line
 ij_javascript_comma_on_new_line = false
-ij_javascript_do_while_brace_force = never
+ij_javascript_do_while_brace_force = always
 ij_javascript_else_on_new_line = false
 ij_javascript_enforce_trailing_comma = keep
 ij_javascript_extends_keyword_wrap = off
@@ -855,14 +857,14 @@ ij_javascript_extends_list_wrap = off
 ij_javascript_field_prefix = _
 ij_javascript_file_name_style = relaxed
 ij_javascript_finally_on_new_line = false
-ij_javascript_for_brace_force = never
+ij_javascript_for_brace_force = always
 ij_javascript_for_statement_new_line_after_left_paren = false
 ij_javascript_for_statement_right_paren_on_new_line = false
 ij_javascript_for_statement_wrap = off
-ij_javascript_force_quote_style = false
-ij_javascript_force_semicolon_style = false
+ij_javascript_force_quote_style = true
+ij_javascript_force_semicolon_style = true
 ij_javascript_function_expression_brace_style = end_of_line
-ij_javascript_if_brace_force = never
+ij_javascript_if_brace_force = always
 ij_javascript_import_merge_members = global
 ij_javascript_import_prefer_absolute_path = global
 ij_javascript_import_sort_members = true
@@ -873,12 +875,12 @@ ij_javascript_indent_case_from_switch = true
 ij_javascript_indent_chained_calls = true
 ij_javascript_indent_package_children = 0
 ij_javascript_jsx_attribute_value = braces
-ij_javascript_keep_blank_lines_in_code = 2
+ij_javascript_keep_blank_lines_in_code = 1
 ij_javascript_keep_first_column_comment = true
 ij_javascript_keep_indents_on_empty_lines = false
 ij_javascript_keep_line_breaks = true
-ij_javascript_keep_simple_blocks_in_one_line = false
-ij_javascript_keep_simple_methods_in_one_line = false
+ij_javascript_keep_simple_blocks_in_one_line = true
+ij_javascript_keep_simple_methods_in_one_line = true
 ij_javascript_line_comment_add_space = true
 ij_javascript_line_comment_at_first_column = false
 ij_javascript_method_brace_style = end_of_line
@@ -921,12 +923,12 @@ ij_javascript_space_before_for_left_brace = true
 ij_javascript_space_before_for_parentheses = true
 ij_javascript_space_before_for_semicolon = false
 ij_javascript_space_before_function_left_parenth = true
-ij_javascript_space_before_generator_mult = false
+ij_javascript_space_before_generator_mult = true
 ij_javascript_space_before_if_left_brace = true
 ij_javascript_space_before_if_parentheses = true
 ij_javascript_space_before_method_call_parentheses = false
 ij_javascript_space_before_method_left_brace = true
-ij_javascript_space_before_method_parentheses = false
+ij_javascript_space_before_method_parentheses = true
 ij_javascript_space_before_property_colon = false
 ij_javascript_space_before_quest = true
 ij_javascript_space_before_switch_left_brace = true
@@ -952,11 +954,11 @@ ij_javascript_spaces_within_brackets = false
 ij_javascript_spaces_within_catch_parentheses = false
 ij_javascript_spaces_within_for_parentheses = false
 ij_javascript_spaces_within_if_parentheses = false
-ij_javascript_spaces_within_imports = false
+ij_javascript_spaces_within_imports = true
 ij_javascript_spaces_within_interpolation_expressions = false
 ij_javascript_spaces_within_method_call_parentheses = false
 ij_javascript_spaces_within_method_parentheses = false
-ij_javascript_spaces_within_object_literal_braces = false
+ij_javascript_spaces_within_object_literal_braces = true
 ij_javascript_spaces_within_object_type_braces = true
 ij_javascript_spaces_within_parentheses = false
 ij_javascript_spaces_within_switch_parentheses = false
@@ -964,17 +966,17 @@ ij_javascript_spaces_within_type_assertion = false
 ij_javascript_spaces_within_union_types = true
 ij_javascript_spaces_within_while_parentheses = false
 ij_javascript_special_else_if_treatment = true
-ij_javascript_ternary_operation_signs_on_next_line = false
+ij_javascript_ternary_operation_signs_on_next_line = true
 ij_javascript_ternary_operation_wrap = off
 ij_javascript_union_types_wrap = on_every_item
 ij_javascript_use_chained_calls_group_indents = false
-ij_javascript_use_double_quotes = true
+ij_javascript_use_double_quotes = false
 ij_javascript_use_explicit_js_extension = global
 ij_javascript_use_path_mapping = always
 ij_javascript_use_public_modifier = false
-ij_javascript_use_semicolon_after_statement = true
+ij_javascript_use_semicolon_after_statement = false
 ij_javascript_var_declaration_wrap = normal
-ij_javascript_while_brace_force = never
+ij_javascript_while_brace_force = always
 ij_javascript_while_on_new_line = false
 ij_javascript_wrap_comments = false
 
