--- a/build.gradle
+++ b/build.gradle
@@ -160,6 +160,14 @@ subprojects {
                 if (details.requested.group == 'org.yaml' && details.requested.name == 'snakeyaml') {
                     details.useVersion '1.20'
                 }
+
+                if (details.requested.group == 'io.micrometer') {
+                    details.useVersion '1.5.1'
+                }
+
+                if (details.requested.group == 'org.hdrhistogram') {
+                    details.useVersion '2.1.12'
+                }
             }
         }
     }
