--- a/quasar-core/build.gradle
+++ b/quasar-core/build.gradle
@@ -90,11 +90,11 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'org.slf4j:slf4j-api:1.7.20'
 
-    implementation("io.dropwizard.metrics:metrics-core:4.1.2") {
+    implementation("io.dropwizard.metrics:metrics-core:4.1.9") {
         exclude group: 'org.slf4j', module: '*'
     }
 
-    implementation "io.dropwizard.metrics:metrics-jmx:4.1.2"
+    implementation "io.dropwizard.metrics:metrics-jmx:4.1.9"
 
     provided "org.apache.ant:ant:1.10.5"
     implementation 'com.google.errorprone:error_prone_annotations:2.1.3'
@@ -126,7 +126,7 @@ dependencies {
 
     annotationProcessor 'org.kohsuke.metainf-services:metainf-services:1.8'
 
-    implementation "org.hdrhistogram:HdrHistogram:2.1.10"
+    implementation "org.hdrhistogram:HdrHistogram:2.1.+"
     implementation("org.latencyutils:LatencyUtils:2.0.3") {
         exclude group: "org.hdrhistogram", module: '*'
     }
