--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jdk:
 services:
   - mongodb
 script:
-  - travis_wait 50 ./test.sh
+  - travis_wait 50 gradle test
 env:
   global:
     JAVA_OPTS=-Xmx1024m
