--- a/gradle/instrument.gradle
+++ b/gradle/instrument.gradle
@@ -44,8 +44,16 @@ artifacts {
 compileJava.dependsOn processResources
 compileJava {
     doLast {
+        def classpath = configurations.compileClasspath.asPath + ':' + configurations.runtimeClasspath.asPath
+        ant.taskdef(name: 'scanSuspendables', classname: 'co.paralleluniverse.fibers.instrument.SuspendablesScanner', classpath: classpath)
+        ant.scanSuspendables(
+                auto: true,
+                supersFile: "$sourceSets.main.resources.dirs.asPath/META-INF/suspendable-supers",
+                append: false) {
+            fileset(dir: sourceSets.main.output.classesDirs.asPath)
+        }
         ant.taskdef(name: 'instrumentation', classname: 'co.paralleluniverse.fibers.instrument.InstrumentationTask',
-                classpath: configurations.compileClasspath.asPath + ':' + configurations.runtimeClasspath.asPath)
+                classpath: classpath)
         ant.instrumentation(allowMonitors: 'true', allowBlocking: 'true') {
             fileset(dir: sourceSets.main.output.classesDirs.asPath)
         }
@@ -60,7 +68,7 @@ compileTestJava {
     doLast {
         ant.taskdef(name: 'instrumentation', classname: 'co.paralleluniverse.fibers.instrument.InstrumentationTask',
                 classpath: configurations.compileClasspath.asPath + ':' + configurations.runtimeClasspath.asPath)
-        ant.instrumentation(allowMonitors: 'true', allowBlocking: 'true') {
+        ant.instrumentation(allowMonitors: 'true', allowBlocking: 'true', check: 'true', debug: 'true') {
             fileset(dir: sourceSets.main.output.classesDirs.asPath)
             fileset(dir: sourceSets.test.output.classesDirs.asPath)
         }
