--- a/vertx-sync/build.gradle
+++ b/vertx-sync/build.gradle
@@ -12,9 +12,9 @@ dependencies {
     implementation 'io.vertx:vertx-codetrans:3.9.1'
 
     testImplementation 'io.vertx:vertx-unit:3.9.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0-M1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.+'
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0-M1"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
 }
 
 compileJava {
